<resources>
    <string name="app_name">Audio Player</string>
    <string name="http">HTTP</string>
    <string name="stream">Stream</string>
    <string name="sd">SD</string>
    <string name="uri">Uri</string>
    <string name="raw">Raw</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="loop">Loop</string>
    <string name="backward">Back</string>
    <string name="forward">Forw</string>
    <string name="info">Info</string>
    <string name="files">FileManager</string>
    <string name="radio">Radio</string>
    <string name="action_settings">Settings</string>
    <string name="checkSound">Check Sound</string>
    <string name="focus">Focus</string>
    <string name="focus1">focus_always</string>
    <string name="focus2">focus_while</string>
    <string name="focus3">focus_never</string>
    <string name="search_artist">Search information about artist</string>
</resources>
