<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.arseny.audioplayer.MainActivity">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btnStartHttp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStart"
            android:text="@string/http"
            android:textSize="12sp">
        </Button>
        <Button
            android:id="@+id/btnStartStream"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStart"
            android:text="@string/stream"
            android:textSize="12sp">
        </Button>
        <Button
            android:id="@+id/btnStartSD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStart"
            android:text="@string/sd"
            android:textSize="12sp">
        </Button>
        <Button
            android:id="@+id/btnStartUri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStart"
            android:text="@string/uri"
            android:textSize="12sp">
        </Button>
    </LinearLayout>

    <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/linearLayoutFoot"
        android:layout_below="@+id/linearLayout1"
        android:drawSelectorOnTop="true" />

    <LinearLayout
        android:id="@+id/linearLayoutFoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_above="@+id/seekBar"
                android:layout_gravity="left"
                android:gravity="left" />
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:left="@+id/startTime"
                android:layout_toLeftOf="@+id/startTime"
                android:right="@+id/endTime"
                android:layout_toStartOf="@+id/endTime"
                android:id="@+id/seekBar"
                tools:ignore="ObsoleteLayoutParam" />
            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_alignBaseline="@+id/startTime"
                android:layout_alignBottom="@+id/startTime"
                android:layout_gravity="right"
                android:gravity="right" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <Button
                android:id="@+id/btnPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/pause">
            </Button>
            <Button
            android:id="@+id/btnResume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/resume"
            android:textSize="12sp">
            </Button>
            <Button
            android:id="@+id/btnStop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/stop"
            android:textSize="12sp">
            </Button>
            <CheckBox
            android:id="@+id/chbLoop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loop">
            </CheckBox>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom|center"
            android:orientation="horizontal">
            <Button
            android:id="@+id/btnBackward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/backward"
            android:textSize="12sp">
            </Button>
            <Button
            android:id="@+id/btnForward"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/forward"
            android:textSize="12sp">
            </Button>
            <Button
            android:id="@+id/btnInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/info"
            android:textSize="12sp">
            </Button>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>